--- a/spcLite.html
+++ b/spcLite.html
@@ -12,7 +12,7 @@
     <div class="erasecursor" id="erasecursor"></div>
 
     <div class="loaderholder">
-      <div id="loader" ; class="loader"></div>
+      <div id="loader" class="loader"></div>
     </div>
 
     <div class="results" id="results">
@@ -20,28 +20,21 @@
         <span class="resultsheader" id="resultsheader"><b>Results</b></span>
         <button
           class="cancelbtn"
-          ;
           id="cancelbtn"
           onclick="cancelClicked()"
         ></button>
         <button
           class="reshelpbtn"
-          ;
           id="reshelpbtn"
           onclick="resultsHelpClicked()"
         ></button>
       </div>
       <textarea
         class="outputpopuptext"
-        ;
         id="outputpopuptext"
-        ;
         readonly="true"
-        ;
         spellcheck="false"
-        ;
         name="outputpopuptext"
-        ;
         wrap="hard"
         value="Name of file \n Date And Time \n Area"
       >
@@ -54,33 +47,22 @@
         <span class="errorheader" id="errorheader"></span>
         <button
           class="errorreshelpbtn"
-          ;
           id="errorreshelpbtn"
           onclick="errorHelpClicked()"
         ></button>
       </div>
       <textarea
         class="erroralerttext"
-        ;
         id="erroralerttext"
-        ;
         readonly="true"
-        ;
         spellcheck="false"
-        ;
         name="erroralerttext"
-        ;
         wrap="hard"
       >
 This is the error text!
         </textarea
       >
-      <button
-        class="errorokbtn"
-        ;
-        id="errorokbtn"
-        onclick="errorcancelClicked()"
-      >
+      <button class="errorokbtn" id="errorokbtn" onclick="errorcancelClicked()">
         <b>OK</b>
       </button>
     </div>
@@ -90,33 +72,26 @@ This is the error text!
         <span class="clearheader" id="clearheader"><b>Clear Screen?</b></span>
         <button
           class="clearhelpbtn"
-          ;
           id="clearhelpbtn"
           onclick="clearHelpClicked()"
         ></button>
       </div>
       <textarea
         class="clearalerttext"
-        ;
         id="clearalerttext"
-        ;
         readonly="true"
-        ;
         spellcheck="false"
-        ;
         name="clearalerttext"
-        ;
         wrap="hard"
       >
 Clear the screen? This action cannot be undone.
         </textarea
       >
-      <button class="clearokbtn" ; id="clearokbtn" onclick="clearokClicked()">
+      <button class="clearokbtn" id="clearokbtn" onclick="clearokClicked()">
         <b>OK</b>
       </button>
       <button
         class="clearcancelbtn"
-        ;
         id="clearcancelbtn"
         onclick="clearcancelClicked()"
       >
@@ -131,22 +106,16 @@ Clear the screen? This action cannot be undone.
         >
         <button
           class="firstdimhelpbtn"
-          ;
           id="firstdimhelpbtn"
           onclick="firstdimHelpClicked()"
         ></button>
       </div>
       <textarea
         class="firstdimalerttext"
-        ;
         id="firstdimalerttext"
-        ;
         readonly="true"
-        ;
         spellcheck="false"
-        ;
         name="firstdimalerttext"
-        ;
         wrap="hard"
       >
 Enter first line length:
@@ -155,18 +124,14 @@ Enter first line length:
 
       <input
         class="firstinput"
-        ;
         type="number"
         id="firstinput"
-        ;
         autocomplete="off"
-        ;
         style="width: 40px"
       />
 
       <button
         class="firstdimokbtn"
-        ;
         id="firstdimokbtn"
         onclick="firstdimokClicked()"
       >
@@ -174,7 +139,6 @@ Enter first line length:
       </button>
       <button
         class="firstdimcancelbtn"
-        ;
         id="firstdimcancelbtn"
         onclick="firstdimcancelClicked()"
       >
@@ -187,45 +151,37 @@ Enter first line length:
         <span class="preheader" id="preheader"><b>Precision</b></span>
         <button
           class="prehelpbtn"
-          ;
           id="prehelpbtn"
           onclick="preHelpClicked()"
         ></button>
         <button
           class="prexbtn"
-          ;
           id="prexbtn"
           onclick="precancelClicked()"
         ></button>
       </div>
       <textarea
         class="prealerttext"
-        ;
         id="prealerttext"
-        ;
         readonly="true"
-        ;
         spellcheck="false"
-        ;
         name="clearalerttext"
-        ;
         wrap="hard"
       >
 Select display precision:
         </textarea
       >
-      <select class="precisionselection" ; id="precisionselection">
+      <select class="precisionselection" id="precisionselection">
         <option value="0">0</option>
         <option value="1">1</option>
         <option value="2" selected>2</option>
         <option value="3">3</option>
       </select>
-      <button class="preokbtn" ; id="preokbtn" onclick="preokClicked()">
+      <button class="preokbtn" id="preokbtn" onclick="preokClicked()">
         <b>OK</b>
       </button>
       <button
         class="precancelbtn"
-        ;
         id="precancelbtn"
         onclick="precancelClicked()"
       >
@@ -240,7 +196,6 @@ Select display precision:
         >
         <button
           class="welcomecancelbtn"
-          ;
           id="welcomecancelbtn"
           onclick="welcomecancelClicked()"
         ></button>
@@ -253,7 +208,7 @@ Select display precision:
           <a target="_blank" href="disclaimerredir.html">User Agreement</a>
         </h5>
       </div>
-      <button class="okbtn" ; id="okbtn" onclick="welcomecancelClicked()">
+      <button class="okbtn" id="okbtn" onclick="welcomecancelClicked()">
         <b>Got it!</b>
       </button>
     </div>
@@ -265,7 +220,6 @@ Select display precision:
         >
         <button
           class="SaveRedircancelbtn"
-          ;
           id="SaveRedircancelbtn"
           onclick="SaveRedircancelClicked()"
         ></button>
@@ -275,7 +229,6 @@ Select display precision:
       </div>
       <button
         class="SaveRedirokbtn"
-        ;
         id="SaveRedirokbtn"
         onclick="SaveRedircancelClicked()"
       >
@@ -283,7 +236,6 @@ Select display precision:
       </button>
       <button
         class="SaveRedirPricingbtn"
-        ;
         id="SaveRedirPricingbtn"
         onclick="buyproclicked()"
       >
@@ -298,7 +250,6 @@ Select display precision:
         >
         <button
           class="LinesRedircancelbtn"
-          ;
           id="LinesRedircancelbtn"
           onclick="LinesRedircancelClicked()"
         ></button>
@@ -309,7 +260,6 @@ Select display precision:
       </div>
       <button
         class="LinesRedirokbtn"
-        ;
         id="LinesRedirokbtn"
         onclick="LinesRedircancelClicked()"
       >
@@ -317,7 +267,6 @@ Select display precision:
       </button>
       <button
         class="LinesRedirPricingbtn"
-        ;
         id="LinesRedirPricingbtn"
         onclick="buyproclicked()"
       >
@@ -328,32 +277,25 @@ Select display precision:
     <canvas id="canvas"></canvas>
 
     <div id="menubar">
-      <div class="pricinglink" ; id="pricinglink">
+      <div class="pricinglink" id="pricinglink">
         Currently in demo mode
-        <button class="buypro" ; id="buypro" onclick="buyproclicked()">
+        <button class="buypro" id="buypro" onclick="buyproclicked()">
           Get Pro!
         </button>
       </div>
       <input
         class="inputbox"
-        ;
         type="number"
         id="inputBox"
-        ;
-        display="none;"
+        display="none"
         autocomplete="off"
-        ;
         style="width: 65px"
       />
       <textarea
         class="outputboxcl"
-        ;
         id="outputBox"
-        ;
         readonly="true"
-        ;
         spellcheck="false"
-        ;
         rows="2"
         cols="20"
         name="outputBox"
@@ -371,20 +313,19 @@ Select display precision:
           <span class="gobtntooltip">Get Section Properties!</span>
         </button>
 
-        <button class="linesbtn" ; id="linesb" onclick="Button2Clicked()">
+        <button class="linesbtn" id="linesb" onclick="Button2Clicked()">
           <span class="linesbtntooltip">Lines (l)</span>
         </button>
 
         <button
           class="constlinesbtn"
-          ;
           id="constlinesb"
           onclick="ConstLinesClicked()"
         >
           <span class="constlinesbtntooltip">Construction Lines (c)</span>
         </button>
 
-        <button class="filletsbtn" ; id="filletsb" onclick="Button3Clicked()">
+        <button class="filletsbtn" id="filletsb" onclick="Button3Clicked()">
           <span class="filletsbtntooltip">Fillets (f)</span>
         </button>
 
@@ -398,58 +339,47 @@ Select display precision:
           />
         </span>
 
-        <button class="snipbtn" ; id="snipb" onclick="SnipClicked()">
+        <button class="snipbtn" id="snipb" onclick="SnipClicked()">
           <span class="snipbtntooltip">Trim (t)</span>
         </button>
 
-        <button class="erasebtn" ; id="eraseb" onclick="EraseClicked()">
+        <button class="erasebtn" id="eraseb" onclick="EraseClicked()">
           <span class="erasebtntooltip">Erase (e)</span>
         </button>
 
-        <button
-          class="dimlinesbtn"
-          ;
-          id="dimlinesb"
-          onclick="DimLinesClicked()"
-        >
+        <button class="dimlinesbtn" id="dimlinesb" onclick="DimLinesClicked()">
           <span class="dimlinesbtntooltip">Linear Dimension (d)</span>
         </button>
 
         <button
           class="dimanglesbtn"
-          ;
           id="dimanglesb"
           onclick="DimAnglessClicked()"
         >
           <span class="dimanglesbtntooltip">Angular Dimension (a)</span>
         </button>
 
-        <button class="undobtn" ; id="undob" onclick="undoClicked()">
+        <button class="undobtn" id="undob" onclick="undoClicked()">
           <span class="undobtntooltip">Undo (ctrl-z)</span>
         </button>
 
-        <button class="redobtn" ; id="redob" onclick="redoClicked()">
+        <button class="redobtn" id="redob" onclick="redoClicked()">
           <span class="redobtntooltip">Redo (ctrl-r)</span>
         </button>
 
-        <button class="clearbtn" ; id="clearb" onclick="clearClicked()">
+        <button class="clearbtn" id="clearb" onclick="clearClicked()">
           <span class="clearbtntooltip">Clear</span>
         </button>
 
-        <button
-          class="precisionbtn"
-          ;
-          id="precisionb"
-          onclick="Button8Clicked()"
-        >
+        <button class="precisionbtn" id="precisionb" onclick="Button8Clicked()">
           <span class="precisionbtntooltip">Change Dimension Precision</span>
         </button>
 
-        <button onclick="Button7Clicked()" ; class="savebtn">
+        <button onclick="Button7Clicked()" class="savebtn">
           <span class="savebtntooltip">Save Shape</span>
         </button>
 
-        <button onclick="LoadClicked()" ; class="loadbtn">
+        <button onclick="LoadClicked()" class="loadbtn">
           <span class="loadbtntooltip">Load Shape</span>
         </button>
 
