Removed Some Dead Code.

--- a/spcLite.html
+++ b/spcLite.html
@@ -388,7 +388,7 @@ Select display precision:
         </button>
       </div>
     </div>
-    <script src="FontSize.js"></script>
+    <script src="FontSizeSetup.js"></script>
     <script src="spcLite.js"></script>
   </body>
 </html>
